[package]
name = "offchain-worker"
version = "4.0.0-dev"
authors = ["Akagi201 <https://github.com/Akagi201>"]
edition = "2021"
license = "Unlicense"
homepage = "https://substrate.io"
repository = "https://github.com/Akagi201/subchain"
description = "FRAME example pallet for offchain worker"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '2.0.0'

[dependencies.lite-json]
version = "0.1.3"
default-features = false

[dependencies.log]
version = "0.4.14"
default-features = false

[dependencies.scale-info]
version = "1.0"
default-features = false
features = ["derive"]

[dependencies.frame-support]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'monthly-2022-01'
version = '4.0.0-dev'

[dependencies.frame-system]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'monthly-2022-01'
version = '4.0.0-dev'

[dependencies.sp-core]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'monthly-2022-01'
version = '4.1.0-dev'

[dependencies.sp-runtime]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'monthly-2022-01'
version = '4.0.0'

[dependencies.sp-io]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'monthly-2022-01'
version = '4.0.0'

[dependencies.sp-keystore]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'monthly-2022-01'
version = '0.10.0-dev'

[dependencies.sp-std]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'monthly-2022-01'
version = '4.0.0'

[features]
default = ["std"]
std = [
	"codec/std",
	"scale-info/std",
	"frame-support/std",
	"frame-system/std",
	"lite-json/std",
	"sp-core/std",
	"sp-io/std",
	"sp-keystore/std",
	"sp-runtime/std",
	"sp-std/std",
	"log/std",
]
try-runtime = ["frame-support/try-runtime"]
